# GIRTool_Tauri

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: AI_ASSISTANT.md  CROSS_WINDOW_SYNC.md  PHASE1_PLAN.md  TEST_CHECKLIST.md  geotechnical-chart-system.md
docs/cpt_reference/: Robertson classification_2010_Qt_Bq.csv  Robertson classification_2010_Qt_Fr.csv  cpt_calc.py
docs/cpt_reference/fixtures/: cpt_input.csv  expected_mayne.csv  expected_robertson.csv
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  tauri-api.js
frontend/src/components/: AddonControl.jsx  AddonLayers.jsx  ColumnFilter.jsx  CrsCursorReadout.jsx  ErrorBoundary.jsx  FilterPanel.jsx  Logo.jsx  MapSearch.jsx  ShapeActions.jsx  ShapeDraw.jsx  Sidebar.jsx  StartupScreen.jsx
frontend/src/context/: AppContext.jsx  FilterContext.jsx
frontend/src/hooks/: useDragSelect.js  useDragSelection.js
frontend/src/lib/: baseLayers.js  crsDk.js  dataChanged.js  geo.js  proj.js  shapeTools.jsx  units.js  useThrottledAddons.js
frontend/src/pages/: AiChatPage.jsx  BoundariesPage.jsx  ChartsPage.jsx  ColorsPage.jsx  CoordinateSystemTab.jsx  CptCalcPage.jsx  DataPage.jsx  DataSelectionPage.jsx  GroupingPage.jsx  HelpPage.jsx  MapAddonsTab.jsx  MapPage.jsx  PointsPage.jsx  ProjectsPage.jsx  QueryConfigTab.jsx  SelectionMap.jsx  SettingsPage.jsx  StrataPage.jsx
frontend/src/utils/: groups.js
scripts/: gen_cpt_fixture.py  index_knowledge.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/resources/: AGENTS.md  GIRTool_Column_Reference.xlsx  ai_config.json  ai_rag_index.json
src-tauri/resources/ai_knowledge/: .gitignore  README.md
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  boundaries.rs  charts.rs  colors.rs  columns.rs  cpt.rs  database.rs  download.rs  geocode.rs  grouping.rs  import.rs  map.rs  map_addons.rs  map_query.rs  mod.rs  multi_db.rs  points.rs  points_xlsx.rs  projects.rs  projects_xlsx.rs  queries.rs  query_configs.rs  session.rs  sharepoint.rs  strata.rs  windows.rs  xlsx_fills.rs
