[package]
name    = "girtool"
version = "0.1.0"
edition = "2021"

[lib]
name = "girtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "girtool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = "2"
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-opener  = "2"

serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1", features = ["preserve_order"] }
tokio        = { version = "1", features = ["full"] }
anyhow       = "1"
thiserror    = "1"

# SQL Server / ODBC.
# NOTE: do NOT enable the `narrow` feature — it switches odbc-api to single-byte
# ANSI APIs (Windows-1252 on Western European systems) which mangles Danish
# characters (æ, ø, å).  The default wide build converts UTF-16 → UTF-8.
odbc-api     = { version = "8" }

# Used by xlsx_fills.rs to read cell BACKGROUND fill colours from xlsx files —
# calamine returns cell values but doesn't expose cell formatting, so we parse
# the styles.xml + worksheet XML directly via zip + quick-xml.
zip          = "0.6"
quick-xml    = "0.31"

# Excel reading (load existing xlsx)
calamine     = { version = "0.24", features = ["dates"] }

# Excel writing
rust_xlsxwriter = { version = "0.75", features = ["serde"] }

# Map addons (M4.5b): local-file → GeoJSON conversion
shapefile    = "0.6"   # .shp/.dbf reading
csv          = "1"     # CSV parsing (delimiter-detected)
encoding_rs  = "0.8"   # non-UTF8 (Windows-1252) CSV fallback; already in tree via reqwest

# HTTP client (SharePoint / Graph API)
reqwest      = { version = "0.12", features = ["json", "rustls-tls"] }

# Date/time
chrono       = { version = "0.4", features = ["serde"] }

# Fuzzy string matching (group-name resolution from Excel typos)
strsim = "0.11"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto       = true
strip     = true
